--- a/LEVEL 1/Task 1/LandingPage.html
+++ b/LEVEL 1/Task 1/LandingPage.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Website Landing Page</title>
     <link rel="stylesheet" href="LandingPage.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
     <nav>
-        <div class="logo">delhiDelights</div>
+        <div class="logo">FooD</div>
         <div class="menu">
             <a href="#">Home</a>
             <a href="#">Order</a>
@@ -20,8 +24,23 @@
         </div>
     </nav>
 
-    <div class="first"></div>
-    <div class="second"></div>
-    <div class="third"></div>
+
+    <div class="plate animate__animated animate__zoomIn animate__delay-1s">
+        <img src="vecteezy_fresh-salad-with-hard-boiled-eggs-on-white-plate_44817990.png" height="350px" data-tilt>
+
+    </div>
+
+    <div class="text  animate__animated animate__zoomIn animate__delay-1s">
+        <h1>Stay fit</h1>
+        <h1>Eat healthy</h1>
+        <button>Order Now</button>
+    </div>
+
+
+    <div class="first first animate__animated animate__slideInDown"></div>
+    <div class="second  animate__animated animate__zoomIn"></div> 
+    <div class="third  animate__animated animate__slideInUp"></div>
+
+    <script src="tilt.jquery.min.js"></script>
 </body>
 </html>
