--- a/LEVEL 1/Task 2/portfolio.html
+++ b/LEVEL 1/Task 2/portfolio.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                
+            </div>
+            <div class="menu">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Contact</a>
+                <a href="#">Hire me</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
