--- a/LEVEL 1/Task 2/portfolio.html
+++ b/LEVEL 1/Task 2/portfolio.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                
+                PORTFOLIO 
             </div>
             <div class="menu">
                 <a href="#">Home</a>
@@ -19,6 +19,8 @@
                 <a href="#">Services</a>
                 <a href="#">Contact</a>
                 <a href="#">Hire me</a>
+                <i class="fa fa-search"></i>
+                <i class="fa fa-moon-o"></i>
             </div>
         </nav>
     </header>
