--- a/LEVEL 1/Task 2/portfolio.html
+++ b/LEVEL 1/Task 2/portfolio.html
@@ -23,6 +23,25 @@
                 <i class="fa fa-moon-o"></i>
             </div>
         </nav>
+
+        <div class="container">
+            <div class="left">
+                <h2>Hi,I am Shourav Kumar</h2>
+                <h1>Freelancer</h1>
+                <p>
+                    I love Web Development and i have been working on my portfolio since 2025.I have participated in some hackathons and bootcamps for achiving a good rank with my own abilities.I have some good Communication skils for contating a forign company...
+                </p>
+                <br><br>
+                <div>
+                    <a href="#" id="hire">Hire me </a>
+                    <a href="#" id="myp">Portfolio</a>
+
+                </div>
+            </div>
+            <div class="right">
+                <img src="IMG_4123_Original-Photoroom.png" height="515px" >
+            </div>
+        </div>
     </header>
 </body>
 </html>
