--- a/LEVEL 1/Task 2/portfolio.html
+++ b/LEVEL 1/Task 2/portfolio.html
@@ -43,5 +43,17 @@
             </div>
         </div>
     </header>
+
+    <section id="bio">
+        <div class="leftbio">
+            <img src="vecteezy_3d-male-character-pointing-left_24785806.png" height="515px" >
+        </div>
+        <div class="rightbio">
+            <P>MY BIOGRAPHY</P>
+            <H1>Working As A Web Development Projects </H1>
+            <p>I Love Web Development Field.It's a amazing work for creating a website there are many field for showing our skills.I am building a many projects related to website So, your Requirement is to create your any type of bussiness and startup website Contact ASAP.</p>
+            <hr>
+        </div>
+    </section>
 </body>
 </html>
