--- a/LEVEL 1/Task 2/portfolio.html
+++ b/LEVEL 1/Task 2/portfolio.html
@@ -53,7 +53,95 @@
             <H1>Working As A Web Development Projects </H1>
             <p>I Love Web Development Field.It's a amazing work for creating a website there are many field for showing our skills.I am building a many projects related to website So, your Requirement is to create your any type of bussiness and startup website Contact ASAP.</p>
             <hr>
+            <div class="info">
+                <div>
+                    <p><b>Name:</b>Shourav kumar</p>
+                    <p><b>E-Mail:</b>example@gmail.com</p>
+                </div>
+                <div>
+                    <p><b>From:</b>Delhi,India</p>
+                    <p><b>Contact:</b>+91 222 555 777 6</p>
+                </div>
+            </div>
+            <div class="follow">
+                <p><b>Follow me on:</b>
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-whatsapp"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-youtube"></i>
+                <i class="fa fa-instagram"></i>
+            </p>
+            </div>
+            <div>
+                <div class="linkk">
+                    <a href="#" id="wire">Hire me</a>
+                    <a href="#" id="cv">Download CV</a>
+                </div>
+            </div>
+        </div>
+        
+    </section>
+
+    <section id="skills">
+        <div class="intro">
+            <h1>MY SKILLS</h1>
+            <DIV class="card">
+                <div class="cardbody">
+                    <img src="c++.png" height="40px">
+                    <h3>C++ </h3>
+                    <P> C++ is an object-oriented programming language which gives a clear structure to programs.</P>
+                </div>
+                <div class="cardbody">
+                    <img src="css.png" height="40px">
+                    <h3>CSS </h3>
+                    <P>Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML.</P>
+                </div>
+                <div class="cardbody">
+                    <img src="html.png" height="40px">
+                    <h3>HTML </h3>
+                    <P>HTML stands for Hyper Text Markup Language · HTML is the standard markup language for creating Web pages.</P>
+                </div>
+                <div class="cardbody">
+                    <img src="js.png" height="40px">
+                    <h3>JAVASCRIPT </h3>
+                    <P>JavaScript is the programming language of the Web. JavaScript is easy to learn.</P>
+                </div>
+                <div class="cardbody">
+                    <img src="java.png" height="40px">
+                    <h3>JAVA </h3>
+                    <P>Java is a popular programming language, created in 1995. </P>
+                </div>
+                <div class="cardbody">
+                    <img src="php.png" height="40px">
+                    <h3>PHP </h3>
+                    <P>PHP is a scripting language used to create dynamic web pages and applications. </P>
+                </div>
+            </DIV>
         </div>
     </section>
+
+
+    <section id="project">
+        <div class="text">
+            <H1>PROJECTS</H1>
+        </div>
+        <div class="otrbdy">
+            <div class="inrbdy">
+                <img src="2350.jpg" height="200px">
+            </div>
+            <div class="inrbdy">
+                <img src="19767.jpg" height="200px">
+            </div>
+            <div class="inrbdy">
+                <img src="headway-5QgIuuBxKwM-unsplash.jpg" height="200px">
+            </div>
+            <div class="inrbdy">
+                <img src="scott-graham-5fNmWej4tAA-unsplash.jpg" height="200px">
+            </div>
+
+        </div>
+    </section>
+
+    <footer>THANK YOU FOR VISITING</footer>
 </body>
 </html>
