--- a/LEVEL 1/Task 3/index.html
+++ b/LEVEL 1/Task 3/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <input type="number" placeholder="0" id="inputBox">
+        <input type="text" placeholder="0" id="inputBox">
         <div>
             <button class="operator">AC</button>
             <button class="operator">DEL</button>
