--- a/LEVEL 1/Task 2/portfolio.html
+++ b/LEVEL 1/Task 2/portfolio.html
@@ -29,7 +29,7 @@
                 <h2>Hi,I am Shourav Kumar</h2>
                 <h1>Freelancer</h1>
                 <p>
-                    I love Web Development and i have been working on my portfolio since 2025.I have participated in some hackathons and bootcamps for achiving a good rank with my own abilities.I have some good Communication skils for contating a forign company...
+                    I love Web Development and I have been working on my portfolio since 2025.I have participated in some hackathons and bootcamps for achiving a good rank with my own abilities.I have some good Communication skils for contating a forign company...
                 </p>
                 <br><br>
                 <div>
